--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Good Judgement",
+  "name": "Brier score calculator",
   "description": "Brier score calculator",
   "version": "1.0",
   "manifest_version": 3,
